--- a/homePageDesign.css
+++ b/homePageDesign.css
@@ -1,4 +1,3 @@
-
 * {
     color: #f5f5dc;
     padding: 0;
@@ -15,7 +14,7 @@ body {
     height: 100vh;
     width: 100%;
     /*background 9:42 */
-    
+
 }
 
 .header-container {
@@ -37,8 +36,10 @@ body {
     /* size manipulation left */
     height: 25px;
 }
-.navigation-menu{
+
+.navigation-menu {
     margin-top: 10px;
+    margin-right: -55px;
 }
 
 .li-tag {
@@ -66,7 +67,7 @@ body {
     bottom: -5px;
     background: red;
     position: absolute;
-    
+
     transition: 0.4s;
 }
 
@@ -84,7 +85,7 @@ body {
 #menu-begin {
     font-size: 30px;
     display: none;
-    cursor:crosshair;
+    cursor: crosshair;
     /* 11:00 */
 }
 
@@ -99,10 +100,12 @@ body {
     justify-content: center;
     align-items: center;
 }
-.D-image{
-    width:200px;
+
+.D-image {
+    width: 200px;
     opacity: 0.8;
 }
+
 .home-intro {
 
     /* margin-top: 10%;
@@ -122,17 +125,43 @@ body {
 }
 
 #span-2 {
-    font-size: 13px;
+    margin-top: 10px;
+    font-size: 16px;
     padding: 0px;
 }
 
-.font-clr{
+.change-words {
+    margin-left: 5px;
+    color: red;
+    font-size: 20px;
+}
+
+.font-clr {
     color: #f5f5dc;
 }
 
-.change-words:nth-of-type(2) {}
+.btn-layout {
 
-.icon-space {}
+    margin-top: 20px;
+    font-size: 17px;
+    padding: 0px 4px;
+    background: none;
+    border: 1px solid #f5f5dc;
+    border-width: 1.2px;
+    border-radius: 5px;
+    margin: 5px 20px 0px 0px;
+    transition: 0.4s ease;
+}
+
+.btn-layout:hover {
+    background-color: red;
+    box-shadow: 0 0 1rem rgba(255, 0, 0, 0.808);
+    transform: translateY(-4px);
+}
+
+.social-link {
+    margin-bottom: 5px;
+}
 
 .social-link a {
     padding: 0;
@@ -147,14 +176,16 @@ body {
     border-radius: 50%;
     border-width: 1.4px;
     margin: 5px 20px 0px 0px;
-    transition: 0.4s ease;
+    transition: transform 0.4s ease;
 }
 
 .social-link a:hover {
     background-color: red;
     box-shadow: 0 0 1rem rgba(255, 0, 0, 0.808);
+    transform: translateY(-4px);
 }
-.D-tag{
+
+.D-tag {
     display: inline-block;
 }
 
@@ -170,8 +201,14 @@ body {
     gap: 2rem;
 
 }
+#content-add{
+    display: none;
+}
 
-/* about css */
+
+
+
+/* skill css */
 .skill-page {
     min-height: 100vh;
     padding: 9rem 9% 2rem;
@@ -201,7 +238,7 @@ body {
     padding: 9rem 9% 2rem;
     display: flex;
     flex-direction: column;
-    
+
     justify-content: center;
     align-items: center;
 }
@@ -211,7 +248,8 @@ body {
     height: 100%;
     transition: .3s;
 }
-.project-box:hover .project-image{
+
+.project-box:hover .project-image {
     transform: scale(1.1);
 }
 
@@ -229,7 +267,8 @@ body {
     box-shadow: 0 0 1rem red;
     border-radius: 10px;
 }
-.project-layer a{
+
+.project-layer a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -240,7 +279,8 @@ body {
     text-decoration: none;
     transition: 0.4s;
 }
-.project-layer a:hover{
+
+.project-layer a:hover {
     background-color: red;
 }
 
@@ -260,12 +300,132 @@ body {
     transition: 0.4s;
 
 }
-.project-box:hover .project-layer{
+
+.project-box:hover .project-layer {
     transform: translateY(0);
 }
 
-.footer{
 
+
+
+/* contact css */
+.contact-page {
+    min-height: 100vh;
+    margin-top: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: centre;
+
+    gap: 2rem;
+    background-color: #28282B;
+
+}
+
+.inner-contact-page {
+    min-height: 100vh;
+    padding: 9rem 9% 2rem;
+    display: flex;
+    justify-content: center;
+
+    gap: 2rem;
+    background-color: #28282B;
+
+}
+
+.spans-3 {}
+
+.spans-3 a {
+    color: aliceblue;
+    text-decoration: none;
+    position: relative;
+}
+
+.spans-3 a:after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    left: 0;
+    bottom: -5px;
+    background: red;
+    position: absolute;
+
+    transition: 0.4s;
+}
+
+.spans-3 a:hover::after {
+    width: 100%;
+    color: red;
+    cursor: url('bx bxl-gmail icon-space');
+
+
+}
+
+.form-a {
+    background: black;
+    padding: 20px;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.4s ease;
+}
+
+.form-a:hover {
+
+    box-shadow: 0 0 1rem rgba(255, 0, 0, 0.808);
+    transform: translateY(-4px);
+}
+
+.form-a input {
+    background: none;
+    margin: 3px;
+    color: beige;
+    background-color: #28282B;
+    border: 1.4px solid #f5f5dc;
+    border-radius: 10px;
+    padding: 2px;
+}
+
+/* vertical line */
+.vline {
+    border-left: 4px solid red;
+    height: 290px;
+    left: 50%;
+    animation-name: stretch;
+    animation-duration: 2.5s;
+    animation-timing-function: ease-out;
+    animation-delay: 0;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+    margin: 0 auto;
+}
+
+@keyframes stretch {
+    0% {
+      transform: scale(.8);
+      background-color: #ccc;
+      }
+  
+    100% {
+    background-color: #ccc;
+    }
+  }
+
+
+
+
+/* footer css */
+.footer {
+    height: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.foot-div {
     font-size: 14px;
     padding: 9rem 9% 2rem;
     display: flex;
@@ -275,32 +435,79 @@ body {
     justify-content: center;
     flex-wrap: wrap;
 }
-#up-arrow{
+
+#up-arrow {
     padding: 0;
     margin: 0;
     border-radius: 50%;
     transition: 0.4s;
-    
+
 }
-#up-arrow:hover{
+
+#up-arrow:hover {
     box-shadow: 0 0 1rem rgba(255, 0, 0, 0.808);
 }
 
 
 
 
+
+
+
+
 /* Size manipulation on minimising */
 
-@media(max-width: 1150px){
+@media(max-width: 1150px) {}
+
+@media(max-width: 730px) {
+
+
+
+    /* home-page */
+    .home-page {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .home-intro {
+        margin-bottom: 10px;
+    }
+
+    .D-image {
+        width: 30%;
+        opacity: 0.5;
+        margin-right: -200px;
+    }
+
+    .D-tag {
+
+        align-items: center;
+    }
+
+
 
 }
-@media(max-width: 730px){
 
-    .header-container{
-        padding-right:0 ;
+@media(max-width: 780px) {
+    .head-about {
+        font-size: 2rem;
+    }
+
+    .project-container {
+        display: grid;
+        width: 270px;
+        grid-template-columns: repeat(1, 1fr);
 
     }
-    .navigation-menu{
+
+    .header-container {
+        padding-right: 0;
+
+    }
+
+    .navigation-menu {
         position: absolute;
         width: 25vh;
         top: 100%;
@@ -319,68 +526,70 @@ body {
         display: none;
 
     }
-    .navigation-menu.off{
+
+    .navigation-menu.off {
         display: block;
     }
-    .li-tag a{
+
+    .li-tag a {
         display: block;
     }
+
     .li-tag {
         display: block;
     }
-/* home-page */
-    .home-page {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .home-intro{
-        margin-bottom: 10px;
-    }
-    .D-image{
-        width: 30%;
-        opacity: 0.5;
-        margin-right: -200px;
-    }
-    .D-tag{
 
-        align-items:center;
-    }
-
-    #menu-begin{
+    #menu-begin {
         margin-top: -10px;
         display: block;
         margin-right: 10px;
-        cursor:pointer;
-    }
-    
-}
-
-@media(max-width: 780px){
-    .head-about{
-        font-size: 2rem;
-    }
-    .project-container {
-        display: grid;
-        width: 270px;
-        grid-template-columns: repeat(1, 1fr);
-       
+        cursor: pointer;
     }
 
-    
+
 }
-@media(max-width: 950px) and (min-width:781px){
+
+@media(max-width: 950px) and (min-width:781px) {
     .project-container {
         display: grid;
         width: 550px;
         grid-template-columns: repeat(2, 1fr);
-       
+
     }
+
 
 }
 
+/* line vl -> hl */
+@media(max-width: 610px){
+    .contact-page{
+        align-items: center;
+        justify-content: center;
+    }
 
+    .vline {
+        border: none;
+        border: red;
+        border-top: 4px solid red;
+        height: 5px;
+        width: 100%;
+        animation-name: stretch;
+        animation-duration: 2.5s;
+        animation-timing-function: ease-out;
+        animation-delay: 0;
+        animation-direction: alternate;
+        animation-iteration-count: infinite;
+        animation-play-state: running;
+        margin: 0 auto;
+    }
+    .inner-contact-page {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    
+    }
+
+}
 
 
 
